# bivariate-renderer

./: CMakeLists.txt  README.md  test.math
include/: ast.hpp  enums.hpp  env.hpp  errors.hpp  plot.hpp  types.hpp  utils.hpp  visitor.hpp
include/ast/: ast.hpp  basic.hpp  expression.hpp  statement.hpp
include/ast/expression/: funccall.hpp  leaf.hpp  operator.hpp
include/ast/statement/: assignment.hpp  funcdef.hpp  plot.hpp
include/visitor/: constantFolder.hpp  evaluator.hpp  folder.hpp  serializer.hpp  validator.hpp  visitor.hpp
src/: env.cpp  lexer.l  main.cpp  parser.y  plot.cpp  utils.cpp
src/ast/: ast.cpp  basic.cpp
src/ast/expression/: funccall.cpp  leaf.cpp  operator.cpp
src/ast/statement/: assignment.cpp  funcdef.cpp  plot.cpp
src/visitor/: constantFolder.cpp  evaluator.cpp  folder.cpp  serializer.cpp  validator.cpp
